# arv_robo

./: README.md  arv-usb-serial.rules  cuda_cudnn.md  两轮差速底盘的运动模型分析：运动控制与里程计解算.docx
RFID_system/: INFO.db  Makefile  RFID_system.pro  RFID_system.pro.user.2adfde5  add_user.cpp  add_user.h  add_user.ui  card.cpp  card.h  id_sql.cpp  id_sql.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  man.cpp  man.h  man.ui  moc_add_user.cpp  moc_card.cpp  moc_id_sql.cpp  moc_mainwindow.cpp  moc_man.cpp  moc_process.cpp  moc_show.cpp  moc_show_user.cpp  moc_usart.cpp  process.cpp  process.h  res.qrc  show_user.cpp  show_user.h  show_user.ui  ui_add.h  ui_add_user.h  ui_mainwindow.h  ui_man.h  ui_show.h  ui_show_user.h  usart.cpp  (+1 more)
arv_bringup/: CMakeLists.txt  package.xml
arv_bringup/include/: ARV_MOTOR.h  ARV_USART.h  crc16.h  motor.h  sensor.h
arv_bringup/launch/: RS232_motor.launch  arv_bringup.launch  usb_stm32.launch
arv_bringup/src/: ARV_USART.cpp  crc16.cpp  motor_control.cpp  sensor_data.cpp
arv_kinematics/: CMakeLists.txt  package.xml
arv_kinematics/include/: arv_kinematics.h
arv_kinematics/src/: arv_kinematics.cpp  arv_kinematics_node.cpp  arv_odometry.cpp
arv_navigation/: CMakeLists.txt  package.xml
arv_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch
arv_navigation/launch/include/: amcl.launch  gmapping.launch  move_base.launch
arv_navigation/maps/: map.pgm  map.yaml
arv_navigation/maps/backup/: map.yaml
arv_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
arv_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
arv_teleop/: CMakeLists.txt  package.xml
arv_voice_system/: CMakeLists.txt  package.xml
arv_voice_system/launch/: arv_awake.launch  arv_nav.launch  arv_voice_system.launch  darknet_ros_voice.launch
arv_voice_system/params/: voiceCmd.xml  voiceNav.xml  voiceRobo.xml
arv_voice_system/scripts/: arv_yolo.py  voice_nav.py
arv_voice_system/src/: arv_asr.cpp  arv_awake.cpp  arv_nav_order.cpp  arv_nlu.cpp  arv_tts.cpp  arv_voice_nav.cpp  speech_recognizer.cpp  yolo_tts.cpp
arvlidar_ros/: CMakeLists.txt  package.xml
arvlidar_ros/filter/: laser_filter_mini.yaml
arvlidar_ros/launch/: arv_laser.launch  arvlidar_A1.launch  arvlidar_A2.launch  test_arvlidar.launch  view_arvlidar.launch
darknet_ros/config/: yolov3_LS.yaml
darknet_ros/launch/: darknet_ros_LS_realsense.launch  darknet_ros_LS_usb.launch  darknet_ros_usb.launch  yolo_LS_realsense.launch  yolo_LS_usb.launch  yolo_v3.launch  yolo_voice.launch  yolo_voice_LS_realsense.launch  yolo_voice_LS_usb.launch
darknet_ros/scripts/: test.py  yolo_label.py  yolo_label_LS.py
launch/: cam_ar_track.launch
usb_cam/launch/: ar_track_alvar_test.launch
visual_orientation/: CMakeLists.txt  package.xml
visual_orientation/scripts/: arv_yolo.py
zbar_opencv/: CMakeLists.txt  package.xml
zbar_opencv/launch/: qr_task.launch
zbar_opencv/src/: zbar_opencv.cpp
